<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/layout_create_note"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CreateNote">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_deneme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            >
            <ImageView
                android:id="@+id/imageback"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/coloricon"></ImageView>

            <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:tint="@color/coloricon"
                app:layout_constraintBottom_toBottomOf="@id/imageback"
                app:layout_constraintEnd_toStartOf="@id/btn_save"
                app:layout_constraintTop_toTopOf="@id/imageback"></ImageView>

            <ImageView
                android:id="@+id/btn_save"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:background="@drawable/done_btn_background"
                android:src="@drawable/ic_done"
                app:tint="@color/coloricon"
                app:layout_constraintBottom_toBottomOf="@id/imageback"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageback"></ImageView>

            <EditText
                android:id="@+id/enternotetitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/bold"
                android:hint="@string/title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/colortxthint"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/imageback">
            </EditText>

            <TextView
                android:id="@+id/datetime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medreg"
                android:includeFontPadding="false"
                android:textColor="@color/coloricon"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/enternotetitle"
                app:layout_constraintStart_toStartOf="@id/enternotetitle"
                app:layout_constraintTop_toBottomOf="@id/enternotetitle"
                >
            </TextView>
            
            <ImageView
                android:id="@+id/image_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/enternotetitle"></ImageView>

            <ImageView
                android:id="@+id/delete_image"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_image_remove2"
                app:tint="@color/colordelete"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/image_note"
                app:layout_constraintTop_toTopOf="@id/image_note"/>

            <LinearLayout
                android:id="@+id/layout_web_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/voice_recorder_side"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/txt_web_link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/medreg"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_16ssp"></TextView>

                <ImageView
                    android:id="@+id/delete_web_link"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colornote3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/voice_recorder_side"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/image_note"
                >

                <ImageView
                    android:id="@+id/image_recorder"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_recordings"></ImageView>

                <TextView
                    android:id="@+id/txt_name_voice"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_30sdp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"></TextView>

                <ImageView
                    android:id="@+id/image_recorder_removee"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_delete"
                    android:contentDescription="@string/app_name"
                    app:tint="@color/colornote3" />

            </LinearLayout>

            <EditText
                android:id="@+id/enternote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/medreg"
                android:gravity="top"
                android:hint="@string/type_not_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/colortxthint"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_web_link"
                >
            </EditText>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/variation"></include>

</androidx.coordinatorlayout.widget.CoordinatorLayout>